language/move-prover/tests/sources/functional/loops.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/loops.move:79:5 ───
    │
 79 │ ╭     public fun iter10_abort_incorrect() {
 80 │ │         let i = 0;
 81 │ │         while ({
 82 │ │             spec { assert i <= 7; };
 83 │ │             (i <= 10)
 84 │ │         }) {
 85 │ │             if (i == 7) abort 7;
 86 │ │             i = i + 1;
 87 │ │         }
 88 │ │     }
    │ ╰─────^
    ·
 85 │             if (i == 7) abort 7;
    │             ------------------- abort happened here
    │
    =     at tests/sources/functional/loops.move:79:5: iter10_abort_incorrect (entry)
    =     at tests/sources/functional/loops.move:80:13: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:82:13: iter10_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:81:9: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:85:13: iter10_abort_incorrect (ABORTED)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/loops.move:60:9 ───
    │
 60 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/loops.move:49:5: iter10_no_abort_incorrect (entry)
    =     at tests/sources/functional/loops.move:50:13: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:52:13: iter10_no_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:51:9: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:49:5: iter10_no_abort_incorrect (exit)
